@@ -4,55 +4,53 @@
 # since modifications to this file will be discarded when you
 # (re)install icewm.
 
-xterm.icon: xterm
-rxvt.icon: xterm
-nxterm.icon: xterm
-Gimp.icon: gimp
-fte.icon: fte
-emacs.Emacs.icon: emacs
-AcroRead.icon: pdf
-Netscape.icon: netscape
+*.xterm.*.icon: xterm
+*.rxvt.*.icon: xterm
+*.nxterm.*.icon: xterm
+Gimp.*.*.icon: gimp
+*.fte.*.icon: fte
+Emace.emacs.*.icon: emacs
+AcroRead.*.*.icon: pdf
+Netscape.*.*.icon: netscape
 Navigator.Netscape.icon: communicator-browser
 MailThread.Netscape.icon: communicator-mail
 MailFolder.Netscape.icon: communicator-mail
 Editor.Netscape.icon: communicator-composer
 AddressBook.Netscape.icon: communicator-abook
-AWTapp.icon: java
-xv.icon: xv
-xv.nonICCCMconfigureRequest: 1
-xload.icon: xload
-mozillaComponentBar.icon: netscape 
-mozillaComponentBar.layer: OnTop
-mozillaComponentBar.ignoreTaskBar: 1
-mozillaComponentBar.allWorkspaces: 1
-mozillaComponentBar.dSysMenu: 0
-xeyes.ignoreWinList: 0
-xeyes.ignoreTaskBar: 1
-xeyes.allWorkspaces: 1
-xeyes.dTitleBar: 0
-xeyes.dBorder: 0
-xeyes.dSysMenu: 0
-xeyes.dResize: 0
-xeyes.dClose: 0
-xeyes.dMinimize: 0
-xeyes.dMaximize: 0
-xeyes.ignoreNoFocusHint: 1
+AWTapp.*.*.icon: java
+*.xv.*.icon: xv
+*.xv.*.nonICCCMconfigureRequest: 1
+*.xload.*.icon: xload
+*.mozillaComponentBar.*.icon: netscape 
+*.mozillaComponentBar.*.layer: OnTop
+*.mozillaComponentBar.*.ignoreTaskBar: 1
+*.mozillaComponentBar.*.allWorkspaces: 1
+*.mozillaComponentBar.*.dSysMenu: 0
+*.xeyes.*.ignoreWinList: 0
+*.xeyes.*.ignoreTaskBar: 1
+*.xeyes.*.allWorkspaces: 1
+*.xeyes.*.dTitleBar: 0
+*.xeyes.*.dBorder: 0
+*.xeyes.*.dSysMenu: 0
+*.xeyes.*.dResize: 0
+*.xeyes.*.dClose: 0
+*.xeyes.*.dMinimize: 0
+*.xeyes.*.dMaximize: 0
+*.xeyes.*.ignoreNoFocusHint: 1
 
-XClock.ignoreNoFocusHint: 1
-Vim.icon: vim
+XClock.*.*.ignoreNoFocusHint: 1
+Vim.*.*.icon: vim
 
-applix.ignoreNoFocusHint: 1
-XDdts.noFocusOnAppRaise: 1
-Wingz.noFocusOnAppRaise: 1
-WingzPro.noFocusOnAppRaise: 1
+*.applix.*.ignoreNoFocusHint: 1
+XDdts.*.*.noFocusOnAppRaise: 1
+Wingz.*.*.noFocusOnAppRaise: 1
+WingzPro.*.*.noFocusOnAppRaise: 1
 
-gkrellm.Gkrellm.allWorkspaces: 1
-gkrellm.Gkrellm.ignoreTaskBar: 1
-gkrellm.Gkrellm.layer: Below
-#gkrellm.Gkrellm.doNotCover: 1
+Gkrellm.gkrellm.*.allWorkspaces: 1
+Gkrellm.gkrellm.*.ignoreTaskBar: 1
+Gkrellm.gkrellm.*.layer: Below
 
-MainWindow.licq.allWorkspaces: 1
-MainWindow.licq.ignoreQuickSwitch: 1
-MainWindow.licq.ignoreWinList: 1
-MainWindow.licq.layer: Below
-#MainWindow.licq.doNotCover: 1
+MainWindow.licq.*.allWorkspaces: 1
+MainWindow.licq.*.ignoreQuickSwitch: 1
+MainWindow.licq.*.ignoreWinList: 1
+MainWindow.licq.*.layer: Below
