@@ -5,13 +5,19 @@
 
 #include <X11/Xproto.h>
 #include "yarray.h"
+#include "mstring.h"
 #include "upath.h"
 
 struct WindowOption {
-    WindowOption(const char *name);
+    WindowOption(ustring n_class,
+                 ustring n_name,
+                 ustring n_role);
     ~WindowOption();
 
-    char *name;
+    ustring w_class;
+    ustring w_name;
+    ustring w_role;
+
     char *icon;
     unsigned long functions, function_mask;
     unsigned long decors, decor_mask;
@@ -28,18 +34,33 @@ struct WindowOption {
 
 class WindowOptions {
 public:
-    WindowOption *getWindowOption(const char *name, bool create, bool remove = false);
-    void setWinOption(const char *class_instance, const char *opt, const char *arg);
+    WindowOption *getWindowOption(ustring a_class,
+                                  ustring a_name,
+                                  ustring a_role,
+                                  bool create, bool remove = false);
+    void setWinOption(ustring n_class,
+                      ustring n_name,
+                      ustring n_role,
+                      const char *opt, const char *arg);
 
-    static void combineOptions(WindowOption &cm, WindowOption &n);
+    void mergeWindowOption(WindowOption &cm,
+                           ustring a_class,
+                           ustring a_name,
+                           ustring a_role,
+                           bool remove);
 
 private:
     YObjectArray<WindowOption> fWinOptions;
+
+    static void combineOptions(WindowOption &cm, WindowOption &n);
 };
 
 extern WindowOptions *defOptions;
 extern WindowOptions *hintOptions;
+class YDocument;
 
+
+void setWinOptions(WindowOptions *optionSet, ref<YDocument> doc);
 void loadWinOptions(upath optFile);
 
 #endif
